--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <script src="fetch.js"></script>
     <script src="build.js"></script>
     <script>
-    	if (navigator.serviceWorker) {
-		    navigator.serviceWorker.register('./service-worker.js', {scope: './'})
-		        .then(function (registration) {
-		            console.log(registration);
-		        })
-		        .catch(function (e) {
-		            console.error(e);
-		        })
-		} else {
-		    console.log('Service Worker is not supported in this browser.')
-		}
+  //   	if (navigator.serviceWorker) {
+		//     navigator.serviceWorker.register('./service-worker.js', {scope: './'})
+		//         .then(function (registration) {
+		//             console.log(registration);
+		//         })
+		//         .catch(function (e) {
+		//             console.error(e);
+		//         })
+		// } else {
+		//     console.log('Service Worker is not supported in this browser.')
+		// }
     </script>
 </body>
 </html>
